Bug 1175104 - Enable multithread support on our d3d11 content device. r=Bas, a=lmandel

--HG--
extra : transplant_source : x2%E9n%96%3F%AF%DC%F4%EB%B3_%87%F0%1B%D3Q%FC%21%0B